--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "bing_wallpaper"
-version = "1.0.0-pre"
+version = "1.0.1"
 authors = [ "13xforever <ilya.veselov@gmail.com>" ]
 
 [dependencies]
 rustc-serialize = "0.3"
-hyper = "0.9"
+futures = "0.1"
+hyper = "0.11"
+tokio-core = "0.1"
+serde_json = "1.0"
