--- a/bing-wallpaper-net.csproj
+++ b/bing-wallpaper-net.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <RdXmlFile Include="rd.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!--PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" /-->
     <PackageReference Include="system.json" Version="4.4.0" />
   </ItemGroup>
 
