--- a/bing-wallpaper-net.csproj
+++ b/bing-wallpaper-net.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" /-->
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" />
     <PackageReference Include="system.json" Version="4.4.0" />
   </ItemGroup>
 
