--- a/bing-wallpaper-net.csproj
+++ b/bing-wallpaper-net.csproj
@@ -5,9 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--ItemGroup>
     <RdXmlFile Include="rd.xml" />
-  </ItemGroup>
+  </ItemGroup-->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" />
