--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "bing_wallpaper"
-version = "1.0.0-pre"
+version = "1.0.0-pre2"
 authors = [ "13xforever <ilya.veselov@gmail.com>" ]
+edition = "2021"
 
 [dependencies]
 rustc-serialize = "0.3"
-hyper = "0.9"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
